istio-config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: thorntail-istio-routing-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thorntail-istio-routing-client
spec:
  hosts:
  - "*"
  gateways:
  - thorntail-istio-routing-gateway
  http:
  - match:
    - uri:
        prefix: /thorntail-istio-routing/
    - uri:
        prefix: /thorntail-istio-routing
    rewrite:
      uri: /
    route:
    - destination:
        host: thorntail-istio-routing-client
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: thorntail-istio-routing-service
spec:
  host: thorntail-istio-routing-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: a
    labels:
      version: a
  - name: b
    labels:
      version: b
